# sawyer-superc

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-COLIBRI  MIRROR.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
c/: glm.c  glm.h  kernels.h  network.h  sawyer_net.c  sawyer_net.h  superc.c  superc.h  tokenizer.h
c/colibri/: backend_loader.c  compat.h  decode_batch.h  glm.c  grammar.h  json.h  schema_gbnf.h  st.h  tier.h  tok.h  tok_unicode.h
