[project]
name = "sawyer-superc"
version = "0.1.0"
description = "Native MoE inference engine -- Colibri-derived C kernels with Sawyer network routing"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"